--- a/css/mansStils.css
+++ b/css/mansStils.css
@@ -1,10 +1,10 @@
 body {
-background-color: powderblue;
+background-color: lightsteelblue;
 }
 h1 {
-color: blue;
+color: #666;
 }
 p {
-color: red;
+color: darkblue;
 font-size:120%;
 }
